--- a/JS game engine/css.css
+++ b/JS game engine/css.css
@@ -34,9 +34,9 @@ canvas.hide-cursor {
 	right: 0;
 	bottom: 0;
 	background-image: url('background.png');
-	background-size: 1536px 1024px;
+	background-size: cover;
 	background-position: center;
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
