--- a/JS game engine/css.css
+++ b/JS game engine/css.css
@@ -194,7 +194,8 @@ canvas[style*="position: fixed"] ~ #menuOverlay {
 .menu-slider-value {
 	color: #fff;
 	font-size: 18px;
-	min-width: 50px;
+	width: 60px;
+	flex-shrink: 0;
 	text-align: right;
 }
 
